
=== 0.5.0 (2018-06-01) ===
NEW: CID section

=== 0.4.0 (2018-05-10) ===
CHANGED: upgraded gatsby and tools
CHANGED: to skip menu/pages without content
FIXED: minor typos
NEW: Microservices section

=== 0.3.2 (2018-02-10) ===
NEW: AsyncSteps test case helper

=== 0.3.1 (2018-02-09) ===
CHANGED: upgraded Gatsby deps

=== 0.3.0 (2018-02-05) ===
CHANGED: prev/next buttons to use icons
NEW: completed Interfaces chapter
NEW: completed Misc.js chapter

=== 0.2.4 (2018-02-03) ===
NEW: LD-JSON meta-info
NEW: robots.txt
NEW: added FTN12 v1.11 ES6 Promise / ES7 async function in AsyncSteps support

=== 0.2.3 (2018-01-30) ===
FIXED: links in overview
FIXED: broken canonical URLs

=== 0.2.2 (2018-01-29) ===
CHANGED: to use more HTML-friendly title for sub-pages
CHANGED: updated gatsby deps

=== 0.2.1 (2018-01-29) ===
FIXED: minor grammar
FIXED: to force scroll to top

=== 0.2.0 (2018-01-29) ===
BREAKING CHANGE: moved all docs under /docs/ page & adding dummy landing
FIXED: incorrectly set nginx cache headers
CHANGED: overview
CHANGED: prev buttons colors
CHANGED: heading colors
NEW: EventStream & Misc.JS sections
NEW: AsyncSteps docs
NEW: syntax highlighting

=== 0.1.0 (2018-01-28) ===
NEW: Initial version