@@ -1,0 +1,3 @@
+---
+path: /docs/db/examples/
+---
